--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -44,7 +44,8 @@
     "from web3.eth import Contract\n",
     "from web3.manager import RequestManager, RequestBatcher\n",
     "from sugar.config import ChainSettings, make_op_chain_settings, make_base_chain_settings\n",
-    "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp, ADDRESS_ZERO, chunk,  Pair, find_all_paths\n",
+    "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp, ADDRESS_ZERO, chunk, Pair\n",
+    "from sugar.helpers import find_all_paths, paginate, async_paginate\n",
     "from sugar.abi import get_abi\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPool, LiquidityPoolForSwap, LiquidityPoolEpoch\n",
@@ -567,9 +568,9 @@
     "    @require_context\n",
     "    @lru_cache(maxsize=None)\n",
     "    def get_pool_epochs(self, lp: str, offset: int = 0, limit: int = 10) -> List[LiquidityPoolEpoch]:\n",
-    "        tokens = chain.get_all_tokens(listed_only=False)\n",
-    "        prices = chain.get_prices(tokens)\n",
-    "        r = chain.sugar_rewards.functions.epochsByAddress(limit, offset, normalize_address(lp)).call()\n",
+    "        tokens = self.get_all_tokens(listed_only=False)\n",
+    "        prices = self.get_prices(tokens)\n",
+    "        r = self.sugar_rewards.functions.epochsByAddress(limit, offset, normalize_address(lp)).call()\n",
     "        return self.prepare_pool_epochs(r, tokens, prices)\n",
     "\n",
     "    @require_context\n",
@@ -751,23 +752,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "got 46 epochs\n"
+      "tota l pools: 578\n",
+      "got 191 epochs\n"
      ]
     }
    ],
    "source": [
     "async with AsyncOPChain() as chain:\n",
     "    pools = await chain.get_pools()\n",
+    "    print(f\"tota l pools: {len(pools)}\")\n",
+    "    \n",
     "    # print(await chain.get_pool_epochs(pools[0].lp))\n",
     "    # with OPChain() as chain:\n",
     "    #     print(chain.get_pool_epochs(pools[0].lp))\n",
-    "    limit, offset = 100, 0\n",
-    "    while True:\n",
-    "        r = await chain.sugar_rewards.functions.epochsLatest(limit, offset).call()\n",
-    "        print(f\"got {len(r)} epochs\")\n",
-    "        if len(r) < limit: break\n",
-    "        offset += limit\n",
-    "    \n"
+    "    limit, upper_bound = 100, 2500\n",
+    "    \n",
+    "    # (offset, limit)\n",
+    "    #pagination_batches = list(map(lambda x: (x, limit), list(range(0, upper_bound, limit))))\n",
+    "    \n",
+    "    async def worker(offset, limit):\n",
+    "        return await chain.sugar_rewards.functions.epochsLatest(limit, offset).call()\n",
+    "\n",
+    "    epochs = await async_paginate(worker, limit=100, upper_bound=2000)\n",
+    "\n",
+    "    print(f\"got {len(epochs)} epochs\")\n"
    ]
   },
   {
@@ -782,7 +790,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m     result \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mconnect_ex((host, port))\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# are you running supersim?\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m socket\u001b[38;5;241m.\u001b[39merror \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m      9\u001b[0m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[13], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m     result \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mconnect_ex((host, port))\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# are you running supersim?\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m socket\u001b[38;5;241m.\u001b[39merror \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m      9\u001b[0m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
       "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:39\u001b[0m, in \u001b[0;36mtest_eq\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_eq\u001b[39m(a,b):\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`test` that `a==b`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 39\u001b[0m     \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m==\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:29\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(a, b, cmp, cname)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`assert` that `cmp(a,b)`; display inputs and `cname or cmp.__name__` if it fails\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cname \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: cname\u001b[38;5;241m=\u001b[39mcmp\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m cmp(a,b),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[0;31mAssertionError\u001b[0m: ==:\n61\n0"
