--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "1746715923"
+       "1746804956"
       ]
      },
      "execution_count": null,
@@ -392,6 +392,139 @@
     "print(f\"\\nAll paths from X to Z in a cyclical graph:\")\n",
     "for i, path in enumerate(cycle_paths):\n",
     "    print(f\"Path {i+1}: {' -> '.join(list(map(lambda x: x[2], path)))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Paginator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "async def async_paginate(worker_func, limit=100, upper_bound=2500):\n",
+    "    \"\"\"\n",
+    "    A simple async paginator that dynamically extends the fetch range when results are still being returned.\n",
+    "    \n",
+    "    Args:\n",
+    "        worker_func: An async function that takes (limit, offset) and returns a collection of results\n",
+    "        limit: Number of items to request in each batch\n",
+    "        upper_bound: Initial maximum number of items we expect to fetch\n",
+    "        \n",
+    "    Returns: List of all results fetched\n",
+    "    \"\"\"\n",
+    "    batches = []\n",
+    "    # (offset, limit) pairs\n",
+    "    pagination_batches = list(map(lambda x: (x, limit), list(range(0, upper_bound, limit))))\n",
+    "    for offset, limit in pagination_batches: batches.append(await worker_func(limit=limit, offset=offset))\n",
+    "\n",
+    "    if len(batches[len(batches) - 1]) == 0: return sum(batches, [])\n",
+    "\n",
+    "    # looks like our initial upper bound was too low\n",
+    "    # keep fetching until get 0 results\n",
+    "\n",
+    "    all_results, offset = sum(batches, []), pagination_batches[len(pagination_batches) - 1][0] + limit\n",
+    "\n",
+    "    while True:\n",
+    "        d = await worker_func(limit=limit, offset=offset)\n",
+    "        if len(d) == 0: break\n",
+    "        all_results.extend(d)\n",
+    "        offset += limit\n",
+    "\n",
+    "    return all_results\n",
+    "\n",
+    "def paginate(worker_func, limit=100, upper_bound=2500):\n",
+    "    \"\"\"\n",
+    "    A simple paginator that dynamically extends the fetch range when results are still being returned.\n",
+    "    \n",
+    "    Args:\n",
+    "        worker_func: A function that takes (limit, offset) and returns a collection of results\n",
+    "        limit: Number of items to request in each batch\n",
+    "        upper_bound: Initial maximum number of items we expect to fetch\n",
+    "        \n",
+    "    Returns: List of all results fetched\n",
+    "    \"\"\"\n",
+    "    batches = []\n",
+    "    # (offset, limit) pairs\n",
+    "    pagination_batches = list(map(lambda x: (x, limit), list(range(0, upper_bound, limit))))\n",
+    "    for offset, limit in pagination_batches: batches.append(worker_func(limit=limit, offset=offset))\n",
+    "\n",
+    "    if len(batches[len(batches) - 1]) == 0: return sum(batches, [])\n",
+    "\n",
+    "    # looks like our initial upper bound was too low\n",
+    "    # keep fetching until get 0 results\n",
+    "\n",
+    "    all_results, offset = sum(batches, []), pagination_batches[len(pagination_batches) - 1][0] + limit\n",
+    "\n",
+    "    while True:\n",
+    "        d = worker_func(limit=limit, offset=offset)\n",
+    "        if len(d) == 0: break\n",
+    "        all_results.extend(d)\n",
+    "        offset += limit\n",
+    "\n",
+    "    return all_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test paginator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scenario 1: Upper bound guess is good, no need to extend\n",
+    "\n",
+    "mock_data = [\n",
+    "    [1,2,3],     # 0 - 100\n",
+    "    [2],         # 100 - 200\n",
+    "    [5, 5, 5],   # 200 - 300\n",
+    "    [7],         # 300 - 400\n",
+    "    [],          # 400 - 500 \n",
+    "]\n",
+    " \n",
+    "async def async_mock_worker(limit, offset): return mock_data[offset // limit]\n",
+    "def mock_worker(limit, offset): return mock_data[offset // limit]\n",
+    "\n",
+    "test_eq(await async_paginate(async_mock_worker, limit=100, upper_bound=500), [1, 2, 3, 2, 5, 5, 5, 7])\n",
+    "test_eq(paginate(mock_worker, limit=100, upper_bound=500), [1, 2, 3, 2, 5, 5, 5, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scenario 2: Upper bound guess was too low, will need to extend it\n",
+    "\n",
+    "mock_data = [\n",
+    "    [1,2,3],     # 0 - 100\n",
+    "    [2],         # 100 - 200\n",
+    "    [5, 5, 5],   # 200 - 300\n",
+    "    [7],         # 300 - 400\n",
+    "    [],          # 400 - 500 \n",
+    "]\n",
+    " \n",
+    "async def async_mock_worker(limit, offset): return mock_data[offset // limit]\n",
+    "def mock_worker(limit, offset): return mock_data[offset // limit]\n",
+    "\n",
+    "test_eq(await async_paginate(async_mock_worker, limit=100, upper_bound=400), [1, 2, 3, 2, 5, 5, 5, 7])\n",
+    "test_eq(await async_paginate(async_mock_worker, limit=100, upper_bound=200), [1, 2, 3, 2, 5, 5, 5, 7])\n",
+    "test_eq(paginate(mock_worker, limit=100, upper_bound=400), [1, 2, 3, 2, 5, 5, 5, 7])\n",
+    "test_eq(paginate(mock_worker, limit=100, upper_bound=200), [1, 2, 3, 2, 5, 5, 5, 7])"
    ]
   },
   {
