add tests, helpers, clean up

--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -53,6 +53,8 @@
     "  \"price_threshold_filter\": int(os.getenv(\"SUGAR_PRICE_THRESHOLD_FILTER\",\"10\")),\n",
     "  \"pagination_limit\": int(os.getenv(\"SUGAR_PAGINATION_LIMIT\",\"2000\")),\n",
     "  \"pool_page_size\": int(os.getenv(\"SUGAR_POOL_PAGE_SIZE\",\"500\")),\n",
+    "  # XX: dealing with Schrödinger's paginator this is likely to be ignore in the future with new sugar helpers\n",
+    "  \"pools_count_upper_bound\": 2500,\n",
     "  \"native_token_symbol\": \"ETH\",\n",
     "  \"native_token_decimals\": 18,\n",
     "  \"swap_slippage\": 0.01,\n",
@@ -88,6 +90,7 @@
     "    price_batch_size: int\n",
     "    price_threshold_filter: int\n",
     "    pagination_limit: int\n",
+    "    pools_count_upper_bound: int\n",
     "    pool_page_size: int\n",
     "    native_token_symbol: str\n",
     "    native_token_decimals: int\n",
@@ -112,7 +115,7 @@
     "def validate_settings(settings: ChainSettings) -> ChainSettings:\n",
     "    # TODO: this should actually validate stuff, duh\n",
     "    floats = [\"swap_slippage\"]\n",
-    "    ints = [\"price_batch_size\", \"price_threshold_filter\", \"pagination_limit\", \"pool_page_size\", \"native_token_decimals\", \"pricing_cache_timeout_seconds\"]\n",
+    "    ints = [\"price_batch_size\", \"price_threshold_filter\", \"pagination_limit\", \"pool_page_size\", \"native_token_decimals\", \"pricing_cache_timeout_seconds\", \"pools_count_upper_bound\"]\n",
     "    for k in floats: setattr(settings, k, float(getattr(settings, k)))\n",
     "    for k in ints: setattr(settings, k, int(getattr(settings, k)))\n",
     "    return settings\n",
