switch to a more generic threading_max_workers setting

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -622,7 +622,7 @@
     "        \n",
     "        all_quotes = []\n",
     "        \n",
-    "        with ThreadPoolExecutor(max_workers=self.settings.quote_sync_max_workers) as executor:\n",
+    "        with ThreadPoolExecutor(max_workers=self.settings.threading_max_workers) as executor:\n",
     "            # Submit all chunk processing tasks\n",
     "            future_to_chunk = {\n",
     "                executor.submit(get_quotes_for_chunk, chunk_paths): chunk_paths \n",
@@ -786,7 +786,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "==:\n61\n0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m     result = sock.connect_ex((host, port))\n\u001b[32m      6\u001b[39m     \u001b[38;5;66;03m# are you running supersim?\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m socket.error \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m      9\u001b[39m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/env/lib/python3.11/site-packages/fastcore/test.py:39\u001b[39m, in \u001b[36mtest_eq\u001b[39m\u001b[34m(a, b)\u001b[39m\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtest_eq\u001b[39m(a,b):\n\u001b[32m     38\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m`test` that `a==b`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m     \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcname\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m==\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/env/lib/python3.11/site-packages/fastcore/test.py:29\u001b[39m, in \u001b[36mtest\u001b[39m\u001b[34m(a, b, cmp, cname)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[33m\"\u001b[39m\u001b[33m`assert` that `cmp(a,b)`; display inputs and `cname or cmp.__name__` if it fails\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m cname \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: cname=cmp.\u001b[34m__name__\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m cmp(a,b),\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mAssertionError\u001b[39m: ==:\n61\n0"
+     ]
+    }
+   ],
    "source": [
     "host, port ='127.0.0.1', 4444\n",
     "try:\n",
