--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -59,7 +59,7 @@
     "  \"native_token_decimals\": 18,\n",
     "  \"swap_slippage\": 0.01,\n",
     "  \"pricing_cache_timeout_seconds\": 5,\n",
-    "  \"quote_sync_max_workers\": 5\n",
+    "  \"threading_max_workers\": 5\n",
     "}\n",
     "\n",
     "\n",
@@ -97,8 +97,8 @@
     "    native_token_decimals: int\n",
     "    # how often to check for new prices\n",
     "    pricing_cache_timeout_seconds: int\n",
-    "    # how many max workers to use when fetching quotes in sync mode\n",
-    "    quote_sync_max_workers: int\n",
+    "    # how many max workers to use for threading in sync methods\n",
+    "    threading_max_workers: int\n",
     "\n",
     "    def __str__(self):\n",
     "        # go over all attributes of self\n",
@@ -119,7 +119,7 @@
     "    # TODO: this should actually validate stuff, duh\n",
     "    floats = [\"swap_slippage\"]\n",
     "    ints = [\"price_batch_size\", \"price_threshold_filter\", \"pagination_limit\", \"pool_page_size\", \"native_token_decimals\",\n",
-    "            \"pricing_cache_timeout_seconds\", \"pools_count_upper_bound\", \"quote_sync_max_workers\"]\n",
+    "            \"pricing_cache_timeout_seconds\", \"pools_count_upper_bound\", \"threading_max_workers\"]\n",
     "    for k in floats: setattr(settings, k, float(getattr(settings, k)))\n",
     "    for k in ints: setattr(settings, k, int(getattr(settings, k)))\n",
     "    return settings\n",
