--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -197,7 +197,7 @@
     "|pools_count_upper_bound|`POOLS_COUNT_UPPER_BOUND_<CHAIN_ID>`|2500|\n",
     "|pagination_limit|`SUGAR_PAGINATION_LIMIT`|2000|\n",
     "|pricing_cache_timeout_seconds|`SUGAR_PRICING_CACHE_TIMEOUT_SECONDS_<CHAIN_ID>`|5|\n",
-    "|quote_sync_max_workers|`SUGAR_QUOTE_SYNC_MAX_WORKERS_<CHAIN_ID>`|5|\n",
+    "|threading_max_workers|`SUGAR_THREADING_MAX_WORKERS_<CHAIN_ID>`|5|\n",
     "\n",
     "In order to write to Sugar contracts, you need to set your wallet private key using env var `SUGAR_PK`\n",
     "\n",
