--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -131,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "1748962787"
+       "1749118358"
       ]
      },
      "execution_count": null,
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "'0043966021643906482316007341273247918207765941260184919232149051'"
+       "'3417494360353930310854211404577760736704569503196379207383695403'"
       ]
      },
      "execution_count": null,
@@ -242,10 +242,12 @@
    "source": [
     "#| export\n",
     "\n",
-    "def to_bytes32(val: Union[str, bytes]) -> str:\n",
-    "    if isinstance(val, str): val_bytes = Web3.to_bytes(hexstr=val)\n",
-    "    else: val_bytes = val\n",
-    "    return \"0x\" + val_bytes.rjust(32, b'\\x00').hex()"
+    "def to_bytes32(val: str) -> bytes: \n",
+    "    # Remove 0x prefix and pad to 64 hex characters (32 bytes)\n",
+    "    hex_val = val.replace('0x', '').zfill(64)\n",
+    "    return bytes.fromhex(hex_val)\n",
+    "\n",
+    "def to_bytes32_str(val: str) -> str: return f\"0x{to_bytes32(val).hex()}\""
    ]
   },
   {
@@ -275,7 +277,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_eq(to_bytes32(\"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\"), \"0x0000000000000000000000001217bfe6c773eec6cc4a38b5dc45b92292b6e189\")"
+    "test_eq(str(type(to_bytes32(\"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\"))), \"<class 'bytes'>\")\n",
+    "\n",
+    "test_eq(to_bytes32(\"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\").hex(), \"0000000000000000000000001217bfe6c773eec6cc4a38b5dc45b92292b6e189\".lower())\n",
+    "test_eq(to_bytes32(\"0x1174A4719FaF964AfE2179A404b4830EC0DCB8D5\").hex(), \"0000000000000000000000001174A4719FaF964AfE2179A404b4830EC0DCB8D5\".lower())\n",
+    "test_eq(to_bytes32(\"0x0000000000000000000000000000000000000000\").hex(), \"0000000000000000000000000000000000000000000000000000000000000000\".lower())\n",
+    "test_eq(to_bytes32(ADDRESS_ZERO).hex(), \"0000000000000000000000000000000000000000000000000000000000000000\")\n",
+    "\n",
+    "test_eq(to_bytes32_str(\"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\"), \"0x0000000000000000000000001217bfe6c773eec6cc4a38b5dc45b92292b6e189\")"
    ]
   },
   {
@@ -609,8 +618,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling sugar onchain took 1.0047 seconds\n",
-      "Another API call took 1.0018 seconds\n"
+      "Calling sugar onchain took 1.0051 seconds\n",
+      "Another API call took 1.0007 seconds\n"
      ]
     }
    ],
