superswap dynamic fees WIP

--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "from dataclasses import dataclass\n",
     "from sugar.quote import Quote, pack_path\n",
-    "from sugar.helpers import apply_slippage, parse_ether, ICACallData, hash_ICA_calls, OPEN_USDT_TOKEN, to_bytes32, to_bytes32_str\n",
+    "from sugar.helpers import apply_slippage, ICACallData, hash_ICA_calls, OPEN_USDT_TOKEN, to_bytes32, to_bytes32_str\n",
     "from sugar.helpers import ADDRESS_ZERO, normalize_address\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPoolForSwap\n",
@@ -391,7 +391,8 @@
     "    swapper_contract_addr: str\n",
     "    destination_quote: Optional[Quote]\n",
     "    salt: str\n",
-    "    message_fee: int = parse_ether(\"0.0001\")\n",
+    "    bridge_fee: int \n",
+    "    xchain_fee: int\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class SuperSwapData: destination_planner: RoutePlanner; calls: List[ICACallData]; origin_domain: int; salt: str "
@@ -500,8 +501,7 @@
     "        OPEN_USDT_TOKEN,\n",
     "        input.origin_bridge,\n",
     "        input.bridged_amount,\n",
-    "        # TODO: see if this needs to be dynamic\n",
-    "        input.message_fee,\n",
+    "        input.bridge_fee,\n",
     "        input.destination_domain,\n",
     "        input.from_token.token_address == OPEN_USDT_TOKEN,\n",
     "    ])\n",
@@ -515,7 +515,7 @@
     "            to_bytes32(ADDRESS_ZERO),\n",
     "            commitment_hash,\n",
     "            # fee to dispatch x-chain message\n",
-    "            input.message_fee,\n",
+    "            input.xchain_fee,\n",
     "            input.origin_hook,\n",
     "            # TODO: figure out if this works correctly\n",
     "            bytes.fromhex(\"0x\".replace('0x', ''))\n",
@@ -532,7 +532,8 @@
    "source": [
     "from fastcore.test import test_eq\n",
     "from sugar.token import Token\n",
-    "from sugar.quote import QuoteInput"
+    "from sugar.quote import QuoteInput\n",
+    "from sugar.helpers import parse_ether"
    ]
   },
   {
@@ -602,7 +603,9 @@
     "        bridged_amount=1034935,\n",
     "        swapper_contract_addr=normalize_address(\"0x6Df1c91424F79E40E33B1A48F0687B666bE71075\"),\n",
     "        destination_quote=destination_quote,\n",
-    "        salt=\"0x1029921015511891229187135255236634512116219253431042270126772461\"\n",
+    "        salt=\"0x1029921015511891229187135255236634512116219253431042270126772461\",\n",
+    "        bridge_fee=parse_ether(\"0.0001\"),\n",
+    "        xchain_fee=parse_ether(\"0.0001\")\n",
     "    )\n",
     ")\n",
     "\n",
