--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "from dataclasses import dataclass\n",
     "from sugar.quote import Quote, pack_path\n",
-    "from sugar.helpers import apply_slippage, ICACallData, hash_ICA_calls, OPEN_USDT_TOKEN, to_bytes32, to_bytes32_str\n",
+    "from sugar.helpers import apply_slippage, ICACallData, hash_ICA_calls, to_bytes32, to_bytes32_str\n",
     "from sugar.helpers import ADDRESS_ZERO, normalize_address\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPoolForSwap\n",
@@ -368,6 +368,8 @@
     "class SuperSwapQuote:\n",
     "    from_token: Token\n",
     "    to_token: Token\n",
+    "    from_bridge_token: Token\n",
+    "    to_bridge_token: Token\n",
     "    amount_in: float\n",
     "    origin_quote: Optional[Quote] = None\n",
     "    destination_quote: Optional[Quote] = None\n",
@@ -376,6 +378,8 @@
     "class SuperSwapDataInput:\n",
     "    from_token: Token\n",
     "    to_token: Token\n",
+    "    from_bridge_token: Token\n",
+    "    to_bridge_token: Token\n",
     "    account: str\n",
     "    user_ICA: str\n",
     "    user_ICA_balance: int\n",
@@ -427,7 +431,10 @@
     "\n",
     "    print(f\">>>>>>>>>>>>>> transfer_subplan >>>>>>>>>>>>>>>\", transfer_subplan.hex())\n",
     "\n",
-    "    transfer_args = encode(ABI_DEFINITION[CommandType.TRANSFER_FROM], [OPEN_USDT_TOKEN, account, CONTRACT_BALANCE_FOR_V3_SWAPS])\n",
+    "    transfer_args = encode(\n",
+    "        ABI_DEFINITION[CommandType.TRANSFER_FROM],\n",
+    "        [input.to_bridge_token.token_address, account, CONTRACT_BALANCE_FOR_V3_SWAPS]\n",
+    "    )\n",
     "\n",
     "    print(f\">>>>>>>>>>>>>> transfer_args >>>>>>>>>>>>>>>\", transfer_args.hex())\n",
     "    print(f\">>>>>>>>>>>>>>> original swap_subplan_cmds\", swap_subplan_cmds)\n",
@@ -467,7 +474,7 @@
     "    \n",
     "    calls = [\n",
     "        ICACallData(\n",
-    "            to=to_bytes32_str(OPEN_USDT_TOKEN),\n",
+    "            to=to_bytes32_str(input.to_bridge_token.token_address),\n",
     "            value=0,\n",
     "            # TODO: change this to maxBridgedAmount, as at least for exact-in we might not know exactly how much is bridged over, and want to be sure\n",
     "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[input.destination_router, input.user_ICA_balance + input.bridged_amount])\n",
@@ -490,7 +497,7 @@
     "\n",
     "    print(f\">>>>>>>>>>>>>>>>>>>>>>>>>>>> commitment_hash\", commitment_hash.hex())\n",
     "\n",
-    "    needs_relay = input.to_token.token_address != OPEN_USDT_TOKEN\n",
+    "    needs_relay = input.to_token.token_address != input.to_bridge_token.token_address\n",
     "\n",
     "    destination_chain_planner = RoutePlanner()\n",
     "\n",
@@ -498,12 +505,12 @@
     "    destination_chain_planner.add_command(CommandType.BRIDGE_TOKEN, [\n",
     "        BridgeType.HYP_XERC20,\n",
     "        input.user_ICA if needs_relay else input.account,\n",
-    "        OPEN_USDT_TOKEN,\n",
+    "        input.from_bridge_token.token_address,\n",
     "        input.origin_bridge,\n",
     "        input.bridged_amount,\n",
     "        input.bridge_fee,\n",
     "        input.destination_domain,\n",
-    "        input.from_token.token_address == OPEN_USDT_TOKEN,\n",
+    "        input.from_token.token_address == input.from_bridge_token.token_address,\n",
     "    ])\n",
     "\n",
     "    if needs_relay:\n",
@@ -567,8 +574,11 @@
    ],
    "source": [
     "uni_o_usdt = Token(chain_id='130', chain_name='Uni', token_address='0x1217BfE6c773EEC6cc4A38b5Dc45B92292B6E189', symbol='oUSDT', decimals=6, listed=True, wrapped_token_address=None)\n",
+    "op_o_usdt = Token(chain_id='10', chain_name='OP', token_address='0x1217BfE6c773EEC6cc4A38b5Dc45B92292B6E189', symbol='oUSDT', decimals=6, listed=True, wrapped_token_address=None)\n",
     "uni_usdc = Token(chain_id='130', chain_name='Uni', token_address='0x078D782b760474a361dDA0AF3839290b0EF57AD6', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None)\n",
     "op_velo: Token = Token(chain_id='10', chain_name='OP', token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None)\n",
+    "\n",
+    "\n",
     "\n",
     "destination_quote = Quote(\n",
     "    input=QuoteInput(from_token=uni_o_usdt, to_token=uni_usdc, path=[\n",
@@ -589,6 +599,8 @@
     "    SuperSwapDataInput(\n",
     "        from_token=op_velo,\n",
     "        to_token=uni_usdc,\n",
+    "        from_bridge_token=op_o_usdt,\n",
+    "        to_bridge_token=uni_o_usdt,\n",
     "        account=\"0x1e7A6B63F98484514610A9F0D5b399d4F7a9b1dA\",\n",
     "        user_ICA=\"0x79641025d90F8f415DaE48B50EF929D2a8fC8240\",\n",
     "        user_ICA_balance=3227609,\n",
