dynamic fees WIP

--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -48,8 +48,6 @@
    "source": [
     "#| export\n",
     "\n",
-    "# this is where interchain account router contract is deployed (on OP) - superswaps, baby\n",
-    "interchain_account_router_contract_addr = normalize_address(\"0x0bc8e181c04428301309dd1abff804c0ecf6b5a8\")\n",
     "hyperlane_relay_url = \"https://testnet-offchain-lookup.services.hyperlane.xyz/callCommitments/calls\"\n",
     "\n",
     "base_default_settings = {\n",
@@ -75,7 +73,7 @@
     "    wrapped_native_token_addr: str\n",
     "    rpc_uri: str\n",
     "    # interchain account address for superswaps\n",
-    "    interchain_account_addr: str\n",
+    "    interchain_router_contract_addr: str\n",
     "    # bridge contract for superswaps\n",
     "    bridge_contract_addr: str\n",
     "    # bridge token address for superswaps\n",
@@ -180,7 +178,7 @@
     "    d = {\n",
     "        \"rpc_uri\": \"https://optimism-mainnet.wallet.coinbase.com\",\n",
     "        \"wrapped_native_token_addr\": \"0x4200000000000000000000000000000000000006\",\n",
-    "        \"interchain_account_addr\": \"0x44c74D3d791cb4588732A9C9CEdbCb262875A3bE\",\n",
+    "        \"interchain_router_contract_addr\": \"0x3E343D07D024E657ECF1f8Ae8bb7a12f08652E75\",\n",
     "        \"bridge_contract_addr\": \"0x7bd2676c85cca9fa2203eba324fb8792fbd520b8\",\n",
     "        \"bridge_token_addr\": \"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\",\n",
     "        \"sugar_contract_addr\": \"0xA64db2D254f07977609def75c3A7db3eDc72EE1D\",\n",
@@ -255,7 +253,7 @@
     "        \"rpc_uri\": \"https://unichain.drpc.org\",\n",
     "        \"pools_count_upper_bound\": 20,\n",
     "        \"wrapped_native_token_addr\": \"0x4200000000000000000000000000000000000006\",\n",
-    "        \"interchain_account_addr\": \"0x1174A4719FaF964AfE2179A404b4830EC0DCB8D5\",\n",
+    "        \"interchain_router_contract_addr\": \"0x43320f6B410322Bf5ca326a0DeAaa6a2FC5A021B\",\n",
     "        \"bridge_contract_addr\": \"0x4A8149B1b9e0122941A69D01D23EaE6bD1441b4f\",\n",
     "        \"bridge_token_addr\": \"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\",\n",
     "        \"sugar_contract_addr\": \"0x154c0F8331B0B4af1384A2dFa67AADCa5Fd92C20\",\n",
