--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -399,7 +399,7 @@
     "    xchain_fee: int\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class SuperSwapData: destination_planner: RoutePlanner; calls: List[ICACallData]; origin_domain: int; salt: str "
+    "class SuperSwapData: destination_planner: RoutePlanner; calls: List[ICACallData]; origin_domain: int; salt: str; needs_relay: bool "
    ]
   },
   {
@@ -528,7 +528,7 @@
     "            bytes.fromhex(\"0x\".replace('0x', ''))\n",
     "        ])\n",
     "\n",
-    "    return SuperSwapData(destination_planner=destination_chain_planner, calls=calls, origin_domain=input.origin_domain, salt=input.salt)"
+    "    return SuperSwapData(destination_planner=destination_chain_planner, calls=calls, origin_domain=input.origin_domain, salt=input.salt, needs_relay=needs_relay)"
    ]
   },
   {
