use pool type props insteaf of fields

--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -110,9 +110,21 @@
     "    type: int\n",
     "    token0_address: str\n",
     "    token1_address: str\n",
-    "    is_stable: bool\n",
-    "    # concentrated liquidity pools\n",
-    "    is_cl: bool\n",
+    "\n",
+    "    @property\n",
+    "    def is_cl(self) -> bool:\n",
+    "        \"\"\"Returns True if the pool is a concentrated liquidity pool\"\"\"\n",
+    "        return self.type > 0\n",
+    "    \n",
+    "    @property\n",
+    "    def is_stable(self) -> bool:\n",
+    "        \"\"\"Returns True if the pool is a stable pool\"\"\"\n",
+    "        return self.type >= 0 and self.type <= 50\n",
+    "    \n",
+    "    @property\n",
+    "    def is_basic(self) -> bool:\n",
+    "        \"\"\"Returns True if the pool is a basic pool (V2 pools)\"\"\"\n",
+    "        return self.type == 0 or self.type == -1\n",
     "\n",
     "    @classmethod\n",
     "    def from_tuple(cls, t: Tuple, chain_id: str, chain_name: str) -> \"LiquidityPoolForSwap\":\n",
@@ -123,12 +135,8 @@
     "            lp=normalize_address(t[0]),\n",
     "            type=pool_type,\n",
     "            token0_address=token0,\n",
-    "            token1_address=token1,\n",
-    "            is_stable=pool_type == 0,\n",
-    "            is_cl=pool_type > 0\n",
+    "            token1_address=token1\n",
     "        )\n",
-    "\n",
-    "        \n",
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
