--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -55,12 +55,12 @@
     "\n",
     "@dataclass\n",
     "class PreparedRoute:\n",
-    "    types: List[str]; values: List[Union[str, int]]\n",
+    "    types: List[str]; values: List[Union[str, int, bool]]\n",
     "\n",
     "    @property\n",
     "    def encoded(self) -> bytes: return encode_packed(self.types, self.values)\n",
     "\n",
-    "def pack_path(path: List[Tuple[LiquidityPoolForSwap, bool]]) -> PreparedRoute:\n",
+    "def pack_path(path: List[Tuple[LiquidityPoolForSwap, bool]], for_swap: bool = False) -> PreparedRoute:\n",
     "    types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(path))], []) + [\"address\"], []\n",
     "    for node in path:\n",
     "        pool, reversed = node\n",
@@ -84,6 +84,9 @@
     "    \n",
     "    @property\n",
     "    def route(self) -> PreparedRoute: return pack_path(self.path)\n",
+    "\n",
+    "    @property\n",
+    "    def route_for_swap(self) -> PreparedRoute: return pack_path(self.path)\n",
     "\n",
     "@dataclass\n",
     "class Quote:\n",
@@ -122,9 +125,9 @@
    "outputs": [],
    "source": [
     "path = [\n",
-    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', is_stable=False, is_cl=True), False),\n",
-    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', is_stable=False, is_cl=False), False),\n",
-    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', token1_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', is_stable=True, is_cl=False), False)\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40'), False),\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607'), False),\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', token1_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'), False)\n",
     "]\n",
     "\n",
     "rt = pack_path(path)\n",
@@ -136,9 +139,9 @@
     "# test reversed version\n",
     "\n",
     "path = [\n",
-    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', is_stable=False, is_cl=True), True),\n",
-    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', is_stable=False, is_cl=False), False),\n",
-    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', token1_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', is_stable=True, is_cl=False), False)\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40'), True),\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607'), False),\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', token1_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'), False)\n",
     "]\n",
     "\n",
     "rt = pack_path(path)\n",
