adjust pack_path for v2 swaps

--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -61,6 +61,7 @@
     "    def encoded(self) -> bytes: return encode_packed(self.types, self.values)\n",
     "\n",
     "def pack_path(path: List[Tuple[LiquidityPoolForSwap, bool]], for_swap: bool = False) -> PreparedRoute:\n",
+    "    is_v2_swap = for_swap and any(pool.is_basic for pool, _ in path)\n",
     "    types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(path))], []) + [\"address\"], []\n",
     "    for node in path:\n",
     "        pool, reversed = node\n",
@@ -69,7 +70,15 @@
     "        else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable else QUOTER_VOLATILE_POOL_FILLER\n",
     "        if len(values) == 0: values = [token0, filler, token1]\n",
     "        else: values += [filler, token1]\n",
+    "    \n",
+    "    if is_v2_swap:\n",
+    "        types = list(map(lambda t: \"bool\" if t == \"int24\" else t, types))\n",
+    "        for i in range(len(values)):\n",
+    "            if values[i] == QUOTER_STABLE_POOL_FILLER: values[i] = True\n",
+    "            elif values[i] == QUOTER_VOLATILE_POOL_FILLER: values[i] = False\n",
+    "\n",
     "    return PreparedRoute(types=types, values=values)\n",
+    "  \n",
     "\n",
     "@dataclass\n",
     "class QuoteInput:\n",
@@ -148,7 +157,22 @@
     "\n",
     "test_eq(rt.types, ['address', 'int24', 'address', 'int24', 'address', 'int24', 'address'])\n",
     "test_eq(rt.values, ['0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', 200, '0x4200000000000000000000000000000000000006', 4194304, '0x7F5c764cBc14f9669B88837ca1490cCa17c31607', 2097152, '0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'])\n",
-    "test_eq(rt.encoded.hex(), \"6c84a8f1c29108f47a79964b5fe888d4f4d0de400000c842000000000000000000000000000000000000064000007f5c764cbc14f9669b88837ca1490cca17c316072000009560e827af36c94d2ac33a39bce1fe78631088db\")\n"
+    "test_eq(rt.encoded.hex(), \"6c84a8f1c29108f47a79964b5fe888d4f4d0de400000c842000000000000000000000000000000000000064000007f5c764cbc14f9669b88837ca1490cca17c316072000009560e827af36c94d2ac33a39bce1fe78631088db\")\n",
+    "\n",
+    "v2_nodes = [\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xF1046053aa5682b4F9a81b5481394DA16BE5FF6b', type=-1, token0_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', token1_address='0x920Cf626a271321C151D027030D5d08aF699456b'), False),\n",
+    "    (LiquidityPoolForSwap(chain_id=\"10\", chain_name=\"OP\", lp='0xF1046053aa5682b4F9a81b5481394DA16BE5FF6b', type=-1, token0_address='0x920Cf626a271321C151D027030D5d08aF699456b', token1_address='0x4200000000000000000000000000000000000042'), False)\n",
+    "]\n",
+    "\n",
+    "rt = pack_path(v2_nodes, for_swap=True)\n",
+    "test_eq(rt.types, ['address', 'bool', 'address', 'bool', 'address'])\n",
+    "test_eq(rt.values, [\n",
+    "    \"0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db\",\n",
+    "    False,\n",
+    "    \"0x920Cf626a271321C151D027030D5d08aF699456b\",\n",
+    "    False,\n",
+    "    \"0x4200000000000000000000000000000000000042\",\n",
+    "])\n"
    ]
   },
   {
