clean up route_for_swap

--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -95,7 +95,7 @@
     "    def route(self) -> PreparedRoute: return pack_path(self.path)\n",
     "\n",
     "    @property\n",
-    "    def route_for_swap(self) -> PreparedRoute: return pack_path(self.path)\n",
+    "    def route_for_swap(self) -> PreparedRoute: return pack_path(self.path, for_swap=True)\n",
     "\n",
     "@dataclass\n",
     "class Quote:\n",
