--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -241,15 +241,6 @@
     "    \n",
     "    # Group nodes by pool type (v2 or v3)\n",
     "    grouped_nodes: List[List[Tuple[LiquidityPoolForSwap, bool]]] = []\n",
-    "    \n",
-    "    # helpers for getting from and to token addresses\n",
-    "    def from_token_address(node: Tuple[LiquidityPoolForSwap, bool]) -> str:\n",
-    "        pool, reversed = node\n",
-    "        return pool.token0_address if not reversed else pool.token1_address\n",
-    "    def to_token_address(node: Tuple[LiquidityPoolForSwap, bool]) -> str:\n",
-    "        pool, reversed = node\n",
-    "        return pool.token1_address if not reversed else pool.token0_address\n",
-    "\n",
     "\n",
     "    for node in quote.path:\n",
     "        if not grouped_nodes: grouped_nodes.append([node])\n",
@@ -274,10 +265,7 @@
     "                router_address if quote.to_token.wrapped_token_address else account,\n",
     "                quote.amount_in,\n",
     "                min_amount_out,\n",
-    "                [\n",
-    "                    # from, to, stable\n",
-    "                    (from_token_address(n), to_token_address(n), n[0].is_stable) for n in nodes\n",
-    "                ] if is_v2_pool else pack_path(nodes).encoded,\n",
+    "                pack_path(nodes, for_swap=True).encoded,\n",
     "                not tokens_come_from_contract,\n",
     "                False, # isUni\n",
     "            ]\n",
@@ -298,10 +286,7 @@
     "                router_address if is_first_batch_v2 else next_batch[0][0].lp,\n",
     "                quote.amount_in,\n",
     "                0,  # No expectations on min amount out for first batch\n",
-    "                [\n",
-    "                    # from, to, stable\n",
-    "                    (from_token_address(n), to_token_address(n), n[0].is_stable) for n in first_batch\n",
-    "                ] if is_first_batch_v2 else pack_path(first_batch).encoded,\n",
+    "                pack_path(first_batch, for_swap=True).encoded,\n",
     "                not tokens_come_from_contract,\n",
     "                False,  # isUni\n",
     "            ]\n",
@@ -318,9 +303,7 @@
     "                    router_address if is_batch_v2 else next_batch[0][0].lp,\n",
     "                    0 if is_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
     "                    0,  # No expectations for middle batches\n",
-    "                    [\n",
-    "                        (from_token_address(n), to_token_address(n), n[0].is_stable) for n in batch\n",
-    "                    ] if is_batch_v2 else pack_path(batch).encoded,\n",
+    "                    pack_path(batch, for_swap=True).encoded,\n",
     "                    False,  # Money comes from contract\n",
     "                    False,  # isUni\n",
     "                ]\n",
@@ -335,9 +318,7 @@
     "                router_address if quote.to_token.wrapped_token_address else account,\n",
     "                0 if is_last_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
     "                min_amount_out,\n",
-    "                [\n",
-    "                    (from_token_address(n), to_token_address(n), n[0].is_stable) for n in last_batch\n",
-    "                ] if is_last_batch_v2 else pack_path(last_batch).encoded,\n",
+    "                pack_path(last_batch, for_swap=True).encoded,\n",
     "                False,  # Money comes from contract\n",
     "                False,  # isUni\n",
     "            ]\n",
